# multistack-cicd-template

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ai_pr_summary.yml  ai_test_draft.yml  ci.yml  llm_evals.yml  release_notes.yml  reusable-ci.yml  staging_smoke_check.yml
docs/: ai-policy.md  runbook-deploy.md
evals/: .gitkeep
examples/python-fastapi/: Makefile  pyproject.toml
examples/python-fastapi/evals/: golden_intent.json
examples/python-fastapi/prompts/: test_generation.md
examples/python-fastapi/src/ai_cicd_demo/: __init__.py  models.py
examples/python-fastapi/src/ai_cicd_demo/ai/: __init__.py  openai_client.py
examples/python-fastapi/tests/: __init__.py  test_ai_intent.py  test_ai_pr_summary.py  test_shared.py
examples/python-fastapi/tools/: ai_pr_summary.py  ai_test_draft.py  shared.py
prompts/: .gitkeep  pr_summary.md  release_notes.md
src/: .gitkeep
src/ai_cicd_demo/: main.py  models.py
src/ai_cicd_demo/ai/: intent.py
tests/: .gitkeep  test_ai_pr_summary.py  test_main.py
tools/: ai_pr_summary.py  ai_release_notes.py  run_llm_evals.py  shared.py  tooling-matrix.yml
tools/ci/: detect_stack.py  select_commands.py
